# opencv-test

./: .gitignore  CMakeLists.txt  CMakeSettings.json
res/config/: launch.json.in  tasks.json.in
src/: main.cpp  main.hpp
